--- a/fsh/package.json
+++ b/fsh/package.json
@@ -7,8 +7,7 @@
     "description": "The goal of CodeX Empowering Patients to Find Clinical Trials project is to develop open data standards and open APIs that enable interoperable, scalable, and accessible clinical trial matching services.",
     "dependencies": {
       "hl7.fhir.r4.core": "4.0.1", 
-      "hl7.fhir.us.core": "3.1.0",
-      "hl7.fhir.us.mcode": "1.0.0"
+      "hl7.fhir.us.core": "3.1.0"
     },
     "keywords": [
       "US Realm",
