--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-output**
-temp**
-template**
-input**
-input-cache**
+.DS_Store
+Thumbs.db
+/input-cache/org.hl7.fhir.publisher.jar
+/output
+/template
+/temp
+/input
 ig.ini
 package.json
 package-list.json
-.DS_Store
