update to SUSHI 1.3.2, Trial Matching updates
Updated project to comply with the SUSHI updates, added Performance Status, updated diagram, updated partners

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-output**
-temp**
-template**
-input**
-input-cache**
-ig.ini
-package.json
-package-list.json
-fsh/build
-.vscode/
-.gitignore
 .DS_Store
+Thumbs.db
+/fsh-generated
+/input-cache
+/output
+/template
+/temp
